plugins {
    id 'java'
    id 'java-library'
    id 'maven-publish'
}

allprojects {
    group = 'kisonar.poc'
    version = '0.0.1-SNAPSHOT'
    apply from: "${rootDir}/libraries.gradle"
    apply plugin: 'java'
    apply plugin: 'java-library'
    //apply plugin: 'org.javamodularity.moduleplugin'

    repositories {
        mavenLocal()
        mavenCentral()
        maven { url 'https://repo.spring.io/snapshot' }
        maven { url 'https://repo.spring.io/milestone' }
        gradlePluginPortal()
    }

    dependencies {
        /* all projects have JUnit + Mockito activated in compilation & execution*/
        testImplementation libraries.junitJupiterEngine
        testRuntimeOnly libraries.junitPlatformLauncher
        testImplementation libraries.mockito
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(25)
        }
    }

    test {
        useJUnitPlatform()
        ignoreFailures = false /* true continue even there are test failures*/
        testLogging {
            events "PASSED", "SKIPPED", "FAILED", "STANDARD_OUT", "STANDARD_ERROR"
        }
        failFast = true
    }

    tasks.register('copyDependencies', Copy) {
        from configurations.runtimeClasspath
        into "build/dependencies"
    }
}